--- a/magic 8 ball.html
+++ b/magic 8 ball.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>Magic Eight Ball</title>
     <link rel="stylesheet" href="8ballcss.css">
+    <!--css connection-->
     
 </head>
 <body>
@@ -13,12 +14,14 @@
         <h1>Magic Eight Ball</h1>
         <h2> Type your question below</h2>
     <textarea id="questionArea" cols="20" rows="4"></textarea>
+    <!--text area-->
     <br>
     <button> Shake!</button>
     <div id="eightBall">
         <eightBall>
         <answer>
             <p id="answer">Ask again later!</p>
+            <!--the answer spot-->
         </answer>
     </eightBall>
     </content>
@@ -27,4 +30,5 @@
     
 </body>
 <script src= "8balljs.js "></script>
+<!--js connection-->
 </html>
